k8s-practice-02-2026/mern-demo/backend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-backend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      name: backend
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: wasimakram8/k8s-mern-backend:v1
          ports:
            - containerPort: 5000
